# pluton-kit

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  cloverrc.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: cicd.yaml
.github_copy/workflows/: cicd.yaml
docs/: cli_options.rst  conf.py  index.rst  installation.rst  overview.rst  plutonkit.rst  requirements.txt  template.rst  troubleshooting.rst  usage.rst
docs/_templates/: package.rst_t
docs/advanced/: architecture.rst  index.rst
docs/tutorials/: index.rst
plutonkit/: __init__.py
plutonkit/command/: __init__.py
plutonkit/command/action/: command.py  create_achitecture.py  create_project.py  help.py  review_blueprint.py  test.py  validate_blueprint.py
plutonkit/config/: __init__.py  command.py  framework.py  search.py
plutonkit/config/func/: template.py
plutonkit/framework/: blueprint.py  review_blueprint.py  starter_architecture.py
plutonkit/framework/command/: schema_command.py
plutonkit/helper/: arguments.py  command.py  filesystem.py  format.py
plutonkit/management/filesystem/: BlueprintFileSchema.py
plutonkit/management/logic/: ConditionIdentify.py
plutonkit/management/request/: ArchitectureRequest.py  ValidateSource.py
plutonkit/management/template/: TemplateStruct.py  TheTemplate.py
src/plutonkit/: __init__.py
src/plutonkit/command/: __init__.py
src/plutonkit/command/action/: command.py  create_project.py  execute.py  help.py
src/plutonkit/config/: __init__.py  command.py  framework.py  package.py  system.py
src/plutonkit/core/: __init__.py  blueprint_architecture.py
src/plutonkit/core/helper/: command.py  format.py
src/plutonkit/core/management/: command.py  filesystem.py
src/plutonkit/core/management/framework/: blueprint.py
src/plutonkit/framework/: blueprint.py  blueprint_docker.py  inquiry_terminal.py
src/plutonkit/framework/analysis/: word_distance.py
src/plutonkit/framework/command/: schema_command.py  structure_command.py
src/plutonkit/framework/package/: database_script.py  django_script.py
src/plutonkit/helper/: arguments.py  command.py  config.py  filesystem.py  format.py  template.py
src/plutonkit/management/: command.py  format.py
src/plutonkit/management/filesystem/: BlueprintFileSchema.py  template.py
src/plutonkit/management/framework/: blueprint.py
src/plutonkit/management/logic/: ConditionIdentify.py  ConditionSplit.py
src/plutonkit/management/request/: ArchitectureRequest.py  ValidateSource.py
src/plutonkit/management/template/: ContentExtraction.py  TemplateStruct.py  TheShortCutWord.py  TheTemplate.py
src/plutonkit/system/requirement/py_lang/: __init__.py
src/plutonkit/template/bottle/: main.tpl
src/plutonkit/template/default_grpc/client/: main.tpl
src/plutonkit/template/default_grpc/server/: main.tpl
src/plutonkit/template/default_grpc_w_interceptor/server/: main.tpl
src/plutonkit/template/django_graphbox/myapp/: models.tpl  schema.tpl
src/plutonkit/template/django_graphbox/myproject/: schema.tpl
src/plutonkit/template/django_rest/apptest/: serializers.tpl
src/plutonkit/template/fastapi/: main.tpl  start.sh
src/plutonkit/template/flask/: main.tpl  start.sh
src/plutonkit/template/graphene/: main.tpl
src/plutonkit/template/tartiflette/: main.tpl
tests/: Readme.md
tests/raw/tpl/: scriptload.py  scriptload.tplpy
tests/raw/yaml/: architecture.yaml  command_valid.yaml  project_valid.yaml
tests/test_base/helper/: arguments_test.py  condition_identify_test.py  template_test.py
tests/test_base/request/: achitecture_request_test.py  validate_source_test.py
